寄件页面的修复 准备使用第三方SDK

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
             android:label="PushService"
             android:process=":pushservice">
         </service>
+
+        <service android:name=".Service.DemoIntentService"/>
     </application>
 
 </manifest>
