--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.LoginActivity">
+        <activity android:name=".Activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,6 +40,8 @@
         <activity android:name=".Activity.RegisterActivity"/>
         <activity android:name=".Activity.WriteUserInfoActivity"/>
         <activity android:name=".Activity.FreightActivity"/>
+        <activity android:name=".Activity.AdActivity"/>
+        <activity android:name=".Activity.LoginActivity"/>
 
         <service android:name=".Service.PushService"
             android:exported="true"
