--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
 
 
     <application
-        android:name=".Util.GTApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -63,6 +62,11 @@
         <activity android:name=".Activity.MainActivity"/>
         <activity android:name=".Activity.CSActivity"/>
         <activity android:name=".Activity.AboutActivity"/>
+        <activity android:name=".Activity.VipActivity"/>
+        <activity android:name=".Activity.CheckSchoolCourierActivity"/>
+        <activity android:name=".Activity.SchoolCourierActivity"/>
+
+
         <!-- 个推SDK配置开始 -->
         <!-- 配置的第三方参数属性 -->
         <meta-data
