更新快递收寄逻辑以及设置界面的添加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,6 @@
         <activity android:name=".Activity.MainActivity"/>
         <activity android:name=".Activity.CSActivity"/>
         <activity android:name=".Activity.AboutActivity"/>
-        <activity android:name=".Activity.VipActivity"/>
         <activity android:name=".Activity.CheckSchoolCourierActivity"/>
         <activity android:name=".Activity.SchoolCourierActivity"/>
         <activity android:name=".Activity.SCOrderDetailsActivity"/>
@@ -70,6 +69,7 @@
         <activity android:name=".Activity.CompleteActivity"/>
         <activity android:name=".Activity.VipsActivity"/>
         <activity android:name=".Activity.SendOnLineActivity"/>
+        <activity android:name=".Activity.SchoolActivity"/>
 
         <!-- 个推SDK配置开始 -->
         <!-- 配置的第三方参数属性 -->
