--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation files('libs/json_simple-1.1.jar')
     implementation 'com.google.zxing:zxing-parent:3.3.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
 }
