--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,17 @@ android {
     buildToolsVersion '27.0.3'
 }
 
+apply plugin: 'com.mob.sdk'
+MobSDK {
+    appKey "269f231fd5224"
+    appSecret "4adf4506d316050e57eb02fdf8cfbe3b"
+
+    SMSSDK {}
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -46,7 +53,5 @@ dependencies {
     implementation files('libs/GetuiSDK2.12.3.0.jar')
     implementation 'com.android.support:support-v4:27.1.1'
     implementation files('libs/json_simple-1.1.jar')
-    implementation 'com.google.zxing:zxing-parent:3.3.3'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.3'
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
+    implementation 'com.google.zxing:core:3.3.0'
 }
