--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -65,13 +65,16 @@
         <activity android:name=".Activity.AboutActivity"/>
         <activity android:name=".Activity.CheckSchoolCourierActivity"/>
         <activity android:name=".Activity.SchoolCourierActivity"/>
-        <activity android:name=".Activity.SCOrderDetailsActivity"/>
+        <activity android:name=".Activity.AcceptScOrderActivity"/>
         <activity android:name=".Activity.UnCollectedActivity"/>
         <activity android:name=".Activity.CompleteActivity"/>
         <activity android:name=".Activity.VipsActivity"/>
         <activity android:name=".Activity.SendOnLineActivity"/>
         <activity android:name=".Activity.SchoolActivity"/>
         <activity android:name=".Activity.SetActivity"/>
+        <activity android:name=".Activity.ScOrderDetialActivity"/>
+        <activity android:name=".Activity.SchoolSendDetialsActivity"/>
+        <activity android:name="geogle.zxing.activity.CaptureActivity"/>
 
         <!-- 个推SDK配置开始 -->
         <!-- 配置的第三方参数属性 -->
